src/scss/layout/_page.scss
.page {
  background-color: transparent;
  color: $color-white;
  display: flex;
  flex-direction: column;
  gap: 25px;
  padding-top: 100px;

  @include media-tablet {
    gap: 60px;
    padding-top: 120px;
  }

  @include media-laptop-l {
    gap: 120px;
    padding-top: 150px;
  }

  h1, h2, h3, h4, h5, h6,
  p, span, li {
    color: $color-white;
  }

  // Figma title is Inclusive Sans Regular (weight 400), not the bolder
  // 600 used elsewhere in the theme.
  h1 {
    font-family: $font-sans;
    font-weight: 400;
    font-size: 32px;
    line-height: 1.1;

    @include media-tablet {
      font-size: 48px;
    }

    @include media-laptop-l {
      font-size: 60px;
      line-height: 60px;
    }
  }

  .simple-column {
    display: flex;
    flex-direction: column;
    gap: 30px;
  }

  .img-wrap {
    border-radius: 20px;
    overflow: hidden;

    img {
      height: auto;
      width: 100%;
      transform: scale(0.8);
      opacity: 0;
      transition: transform 1.2s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 1.2s ease;
    }

    &.is-visible img {
      transform: scale(1);
      opacity: 1;
    }
  }

  .content {
    display: flex;
    flex-direction: column;
    gap: 20px;
  }

  .floating {
    display: block;

    img {
      float: right;
      height: auto;
      margin: 0 0 15px 0;
      width: 100%;

      @include media-tablet {
        margin: 0 0 15px 15px;
        width: auto;
      }
    }

    p {
      margin: 0 0 20px;
      &:last-of-type {
        margin-bottom: 0;
      }
    }
  }
}
body{
  padding-top: unset !important;
}

